Fixing overflow-x.

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
     font-size: 2.4rem;
     line-height: 1.5;
     color: var(--color-body);
+    overflow-x: hidden;
 }
 h1,
 h2,
@@ -678,6 +679,10 @@ p {
 }
 
 /* Hero */
+.hero {
+    overflow: hidden;
+}
+
 .hero__content {
     overflow: hidden;
     text-overflow: ellipsis;
